# AdForge

./: .gitignore  README.md
backend/: .env.example  Dockerfile  pyproject.toml  requirements.txt
backend/app/: bedrock.py  main.py  schemas.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.jsx  index.css
frontend/src/components/: CampaignResults.jsx  Carousel.jsx  LoadingState.jsx  UploadZone.jsx
